[Improvement] Add global variable to save the webgui language
Signed-off-by: Alvaro Cano <alvaro.cano@zevenet.com>

	modified:   usr/local/zevenet/share/global.conf.template
	modified:   usr/share/perl5/Zevenet/API40/Routes.pm
	modified:   usr/share/perl5/Zevenet/API40/System/Info.pm

--- a/usr/local/zevenet/share/global.conf.template
+++ b/usr/local/zevenet/share/global.conf.template
@@ -441,4 +441,7 @@ $throughput_enabled="false";
 
 $doc_v4_0="https://www.zevenet.com/zapidocv4.0";
 
+# language used for the webgui
+$lang="";
+
 #::END Global Section
