Fix compilation issue if cache enabled, remove unnecessary files
Signed-off-by: Abdessamad El Abbassi <abdess.elabbassi@zevenet.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -22,7 +22,7 @@
 ###############################################################################
 cmake_minimum_required(VERSION 3.6)
 
-#add_definitions(-DSYSLOG_NAMES)
+add_definitions(-DLOGGER_DEBUG=0)
 add_definitions(-DDEBUG_EVENT_MANAGER=0 -DHELLO_WORLD_SERVER=0)
 add_definitions(-DPRINT_READ_STADISTICS=0)
 add_definitions(-DDEBUG_CONNECTION_FLOW=0)
@@ -45,61 +45,46 @@ add_definitions(-DMALLOC_TRIM_TIMER=0 -DMALLOC_TRIM_TIMER_INTERVAL=300) # force 
 add_definitions(-DDEFAULT_MAINTENANCE_INTERVAL=2)
 
 set(l7core_sources
-    ssl/ssl_common.h
-    ssl/ssl_context.cpp
-    ssl/ssl_context.h
-    ssl/ssl_connection_manager.cpp
-    ssl/ssl_connection_manager.h
-    handlers/https_manager.cpp
-    handlers/https_manager.h
-    ssl/ssl_session.h
-    ssl/ssl_session.cpp
-    json/json.h
-    json/json.cpp
-    json/json_data_value.h
-    json/json_data_value.cpp
-    json/json_data_value_types.h
-    json/json_data_value_types.cpp
-    json/json_data.h
-    json/json_data.cpp
-    json/json_parser.h
-    json/json_parser.cpp
-    config/config_node.h
-    event/epoll_manager.cpp
-    event/epoll_manager.h
-    connection/connection.cpp
-    connection/connection.h
-    stream/stream_manager.cpp
-    stream/stream_manager.h
-    http/http_stream.cpp
-    http/http_stream.h
     debug/logger.h
-    util/network.h
-    util/crypto.h
-    stream/listener.cpp
-    stream/listener.h
-    util/utils.h
-    service/backend.h
-    service/backend.cpp
-    config/config.cpp
-    config/config.h
-    config/pound_struct.h
-    stats/backend_stats.h
-    stats/backend_stats.cpp
-    config/svc.h
-    config/svc.cpp
-    http/http_parser.cpp
-    http/http_parser.h http/pico_http_parser.cpp http/pico_http_parser.h
-    http/http_request.h service/service.cpp service/service.h service/service_manager.cpp service/service_manager.h
-    connection/backend_connection.cpp connection/backend_connection.h event/timer_fd.cpp event/timer_fd.h
-    event/signal_fd.cpp event/signal_fd.h http/http.h http/http.cpp util/common.h util/system.h service/http_session_manager.h
-    service/http_session_manager.cpp ctl/control_manager.cpp ctl/control_manager.h util/environment.h ctl/observer.h ctl/ctl.h
-    stats/backend_stats.h stats/backend_stats.cpp event/descriptor.h version.h connection/client_connection.h stats/counter.h
-    handlers/http_manager.cpp
-    handlers/http_manager.h
-    http/http_request.cpp
-    debug/backtrace.cpp
-    debug/backtrace.h)
+    debug/backtrace.h debug/backtrace.cpp
+    ssl/ssl_common.h
+    ssl/ssl_context.h ssl/ssl_context.cpp
+    ssl/ssl_connection_manager.h ssl/ssl_connection_manager.cpp
+    ssl/ssl_session.h ssl/ssl_session.cpp
+    json/json.h json/json.cpp
+    json/json_data_value.h json/json_data_value.cpp
+    json/json_data_value_types.h json/json_data_value_types.cpp
+    json/json_data.h json/json_data.cpp
+    json/json_parser.h json/json_parser.cpp
+    event/timer_fd.h event/timer_fd.cpp
+    event/signal_fd.h event/signal_fd.cpp
+    event/epoll_manager.h event/epoll_manager.cpp
+    event/descriptor.h
+    connection/client_connection.h
+    connection/connection.h connection/connection.cpp
+    connection/backend_connection.h connection/backend_connection.cpp
+    stream/stream_manager.h stream/stream_manager.cpp
+    stream/listener.h stream/listener.cpp
+    stream/stream_data_logger.h stream/stream_data_logger.cpp
+    service/backend.h service/backend.cpp
+    service/http_session_manager.h service/http_session_manager.cpp
+    service/service.h service/service.cpp
+    service/service_manager.h service/service_manager.cpp
+    config/config_node.h
+    config/config_data.h
+    config/config.h config/config.cpp  
+    http/http_stream.h http/http_stream.cpp
+    http/http_parser.h http/http_parser.cpp
+    http/pico_http_parser.h http/pico_http_parser.cpp
+    http/http_request.h http/http_request.cpp
+    http/http.h http/http.cpp
+    util/common.h util/system.h util/network.h util/crypto.h util/environment.h util/utils.h
+    ctl/control_manager.h ctl/control_manager.cpp ctl/observer.h ctl/ctl.h
+    stats/backend_stats.h stats/backend_stats.cpp
+    version.h stats/counter.h
+    handlers/http_manager.h handlers/http_manager.cpp
+    handlers/https_manager.h handlers/https_manager.cpp
+    )
 
 if (ENABLE_ON_FLY_COMRESSION)
     set(l7core_sources ${l7core_sources}
@@ -120,7 +105,7 @@ if (CACHE_SUPPORT)
         cache/ram_cache_storage.cpp
         cache/disk_cache_storage.h
         cache/disk_cache_storage.cpp
-        handlers/CacheManager.cpp
+        handlers/cache_manager.cpp
         handlers/cache_manager.h
         )
 endif ()
