[New feature] New option to add or remove headers from the backend reponse
Signed-off-by: Alvaro Cano <alvaro.cano@zevenet.com>

	modified:   .gitignore
	modified:   usr/share/perl5/Zevenet/API32/Farm/HTTP/Ext.pm
	modified:   usr/share/perl5/Zevenet/API40/Farm/HTTP/Ext.pm
	modified:   usr/share/perl5/Zevenet/API40/Routes/HTTP.pm
	modified:   usr/share/perl5/Zevenet/Farm/HTTP/Ext.pm

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@
 usr/local/zevenet/node_status
 
 usr/local/zevenet/app/nftlb/
+/usr/local/zevenet/app/zhttp/
 /usr/local/zevenet/app/cherokee/
 /usr/local/zevenet/app/gdnsd/
 /usr/local/zevenet/app/pound/
