Generate DH parameters header file on cmake configuration
Signed-off-by: Abdessamad El Abbassi <abdess.elabbassi@zevenet.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,10 +42,6 @@ option(BUILD_TESTS "Build tests" ON)
 option(UNIQUE_BUILD_DIRECTORY "enable build directory" OFF)
 option(BUNDLED_OPENSSL "Use Bundled Openssl (build latest version)" OFF)
 option(BUNDLED_ZLIB "Use Bundled ZLIB (build latest version)" OFF)
-#configuration
-option(GENERATE_DH_2048 "Generate the DH EC 2048 parameters file" OFF)
-option(GENERATE_DH_1024 "Generate the DH EC 1024 parameters file" OFF)
-option(GENERATE_DH_512 "Generate the DH EC 512 parameters file" OFF)
 #debugging
 option(ENABLE_HEAP_PROFILE "Enable heap profiler, also need tcmalloc to be enabled" OFF)
 option(ENABLE_TCMALLOC "Use tcmalloc instead of standard library malloc " OFF)
@@ -53,8 +49,12 @@ option(ENABLE_TCMALLOC "Use tcmalloc instead of standard library malloc " OFF)
 option(CACHE_SUPPORT "Build with cache support" OFF)
 set(CACHE_STORAGE_TYPE 1) # 1 ramfs,2 stdmap,3 memcached, default(1)
 #option(MEMCACHED_ENABLED "memcached" OFF) deprecated
-option(ENABLE_APACHE_LOG_FORMAT "Enable message log in apache format" OFF)
+#option(ENABLE_APACHE_LOG_FORMAT "Enable message log in apache format" OFF) not implemented yet
 option(ENABLE_ON_FLY_COMRESSION "Enable response compression" OFF)
+
+set(RSA_TIMEOUT 7200 )#"RSA keys regeneratiom timeout in seconds")
+set(DH "2048" CACHE STRING "Diffie-Hellman parameters bits length")
+
 
 #file(REMOVE_RECURSE "${MAINFOLDER}/build")
 #file(MAKE_DIRECTORY "${MAINFOLDER}/build")
@@ -189,8 +189,8 @@ if (BUNDLED_ZLIB)
 else ()
     find_package(ZLIB REQUIRED)
     if (ZLIB_FOUND)
-        message(STATUS "Zlib includes ${ZLIB_INCLUDE_DIRS}")
-        message(STATUS "Zlib link ${ZLIB_LIBRARIES}")
+        #message(STATUS "Zlib includes ${ZLIB_INCLUDE_DIRS}")
+        #message(STATUS "Zlib link ${ZLIB_LIBRARIES}")
         include_directories(${ZLIB_INCLUDE_DIRS})
         message(STATUS "Using Zlib ${ZLIB_VERSION}")
     endif ()
@@ -228,8 +228,8 @@ if (BUNDLED_OPENSSL)
 else ()
     pkg_search_module(OPENSSL openssl)
     if (OPENSSL_FOUND)
-        message(STATUS "Openssl includes ${OPENSSL_INCLUDE_DIRS}")
-        message(STATUS "Openssl link ${OPENSSL_LIBRARIES}")
+        #message(STATUS "Openssl includes ${OPENSSL_INCLUDE_DIRS}")
+        #message(STATUS "Openssl link ${OPENSSL_LIBRARIES}")
         include_directories(${OPENSSL_INCLUDE_DIRS})
         message(STATUS "Using OpenSSL ${OPENSSL_VERSION}")
     endif()
@@ -262,43 +262,56 @@ if (CACHE_SUPPORT)
     endif ()
 endif ()
 
-if (GENERATE_DH_512)
-    message(STATUS "Generating DH EC 512 parameters file")
-    execute_process(COMMAND "openssl dhparam -5 -C -noout 512 > ${MAINFOLDER}/src/config/dh512.h" RESULT_VARIABLE ret)
+if (NOT EXISTS "${MAINFOLDER}/src/config/dh512.h")
+    message(STATUS "Generating DH EC 512 parameters")
+    execute_process(
+        COMMAND openssl dhparam -5 -C -noout 512
+        RESULT_VARIABLE ret
+        OUTPUT_FILE "${MAINFOLDER}/src/config/dh512.h")
     if(NOT ret EQUAL "0")
-        message( FATAL_ERROR "/usr/bin/openssl dhparam failed")
-    endif()
-
-endif()
-
-if (GENERATE_DH_1024)
-    message(STATUS "Generating DH EC 1024 parameters file")
-    execute_process(COMMAND "/usr/bin/openssl dhparam -5 -C -noout 1024 > ${MAINFOLDER}/src/config/dh1024.h" RESULT_VARIABLE ret)
-    if(NOT ret EQUAL "0")
-        message( FATAL_ERROR "/usr/bin/openssl dhparam failed")
+        message( FATAL_ERROR "openssl dhparam failed")
     endif()
 endif()
 
-if (GENERATE_DH_2048)
-    message(STATUS "Generating DH EC 2048 parameters file")
-    execute_process(COMMAND "/usr/bin/openssl" "dhparam -5 -C -noout 2048 > ${MAINFOLDER}/src/config/dh2048.h" RESULT_VARIABLE ret)
-    if(NOT ret EQUAL "0")
-        message( FATAL_ERROR "/usr/bin/openssl dhparam failed")
+if (DH EQUAL "1024" )
+        if(NOT EXISTS  "${MAINFOLDER}/src/config/dh1024.h")
+        message(STATUS "Generating DH EC 1024 parameters file")
+        execute_process(
+            COMMAND openssl dhparam -5 -C -noout 1024
+            RESULT_VARIABLE ret
+            OUTPUT_FILE "${MAINFOLDER}/src/config/dh1024.h")
+        if(NOT ret EQUAL "0")
+            message( FATAL_ERROR "openssl dhparam failed")
+        endif()
     endif()
-
-    execute_process(COMMAND "/usr/bin/openssl dhparam -5 -out ${MAINFOLDER}/src/config/dh2048.pem 2048" RESULT_VARIABLE ret)
-    if(NOT ret EQUAL "0")
-        message( FATAL_ERROR "/usr/bin/openssl dhparam failed")
+elseif(DH EQUAL "2048" )
+        if (NOT EXISTS "${MAINFOLDER}/src/config/dh2048.h")
+        message(STATUS "Generating DH EC 2048 parameters file")
+        execute_process(
+            COMMAND openssl dhparam -5 -C -noout 2048
+            RESULT_VARIABLE ret
+            OUTPUT_FILE "${MAINFOLDER}/src/config/dh2048.h")
+        if(NOT ret EQUAL "0")
+            message( FATAL_ERROR "openssl dhparam failed")
+        endif()
     endif()
-
+elseif()
+    message( FATAL_ERROR "Invalid DH bits length specified")
 endif()
-add_definitions(-DDH_LEN=2048 -DC_DH_LEN="1024" -DC_T_RSA="0" -DC_CERT1L=\"\")
+if (NOT EXISTS "${MAINFOLDER}/src/config/dh2048.pem")
+    message(STATUS "Generating dh2048.pem")
+    execute_process(COMMAND openssl dhparam -5 -out "${MAINFOLDER}/src/config/dh2048.pem" 2048 RESULT_VARIABLE ret)
+    if(NOT ret EQUAL "0")
+        message( FATAL_ERROR "openssl dhparam failed")
+    endif()
+endif()
+add_definitions(-DDH_LEN=${DH} -DT_RSA_KEYS=${RSA_TIMEOUT})
 
+add_subdirectory(src)
+add_subdirectory(src/ctl)
 if (BUILD_TESTS)
     add_subdirectory(tests)
 endif ()
-add_subdirectory(src)
-add_subdirectory(src/ctl)
 
 add_executable(zproxy src/main.cpp)
 add_dependencies(zproxy l7pcore)
@@ -345,4 +358,7 @@ macro(add_deployment_directory SRC DEST)
 endmacro()
 
 #install
-install(TARGETS "zproxy" DESTINATION bin)
+install(TARGETS "zproxy" DESTINATION bin COMPONENT binaries)
+install(FILES "${MAINFOLDER}/src/config/dh2048.pem" DESTINATION etc)
+install(FILES "${MAINFOLDER}/docs/zproxy.8" DESTINATION share/man/man8 )
+install(FILES "${MAINFOLDER}/docs/zproxyctl.8" DESTINATION share/man/man8 )
