--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -192,7 +192,7 @@ else ()
         #message(STATUS "Zlib includes ${ZLIB_INCLUDE_DIRS}")
         #message(STATUS "Zlib link ${ZLIB_LIBRARIES}")
         include_directories(${ZLIB_INCLUDE_DIRS})
-        message(STATUS "Using Zlib ${ZLIB_VERSION}")
+        message(STATUS "Using Zlib ${ZLIB_VERSION_STRING}")
     endif ()
 endif()
 
@@ -232,6 +232,9 @@ else ()
         #message(STATUS "Openssl link ${OPENSSL_LIBRARIES}")
         include_directories(${OPENSSL_INCLUDE_DIRS})
         message(STATUS "Using OpenSSL ${OPENSSL_VERSION}")
+        if (OPENSSL_VERSION VERSION_LESS "1.1.0")
+            MESSAGE(FATAL_ERROR "openssl >= 1.1.0 required for TLS")
+        endif()
     endif()
 endif ()
 
