[Bugfix] fixed issue updating packages with proxy configured
Signed-off-by: Adán Samuel Marín Jacquot <adan.marin@zevenet.com>

	modificado:     DEBIAN/control
	modificado:     usr/local/zevenet/bin/checkupgrades
	modificado:     usr/local/zevenet/share/global.conf.template
	modificado:     usr/share/perl5/Zevenet/API40/System/Service/Proxy.pm
	modificado:     usr/share/perl5/Zevenet/Apt.pm

--- a/usr/local/zevenet/share/global.conf.template
+++ b/usr/local/zevenet/share/global.conf.template
@@ -260,7 +260,7 @@ $arpsend_bin="/usr/sbin/arpsend";
 #Where is dhclient
 $dhcp_bin="/usr/sbin/dhclient";
 #Where is netcat
-$netcat_bin="/usr/bin/nc";
+$netcat_bin="/usr/bin/nc.openbsd";#update
 #Where is dmidecode
 $dmidecode_bin="/usr/sbin/dmidecode";
 
