--- a/build-pkg/dockerfile-base
+++ b/build-pkg/dockerfile-base
@@ -1,5 +1,7 @@
 FROM zevenet/zvn-builder-base:#{version}
 
+RUN apt-get --allow-releaseinfo-change update
+
 # Base packages
 RUN apt-get update && apt-get install -y \
     libssl-dev \
