--- a/usr/local/zevenet/share/global.conf.template
+++ b/usr/local/zevenet/share/global.conf.template
@@ -118,8 +118,8 @@ $http_server_dir="$zdir/app/cherokee";
 $http_server_service="/etc/init.d/cherokee";
 $confhttp="$http_server_dir/etc/cherokee/cherokee.conf";#update
 $confhttp_tpl="$http_server_dir/etc/cherokee/cherokee.conf.template";#update
-$http_server_cert="$configdir/zencert.pem";
-$http_server_key="$configdir/zencert-c.key";
+$http_server_cert="$certdir/zencert.pem";
+$http_server_key="$certdir/zencert-c.key";
 $http_server_cert_tpl="$templatedir/zencert.pem";
 $http_server_key_tpl="$templatedir/zencert-c.key";
 $http_bin="$http_server_dir/sbin/cherokee";
