[New feature] upload the offline iso using the zapi
Signed-off-by: Alvaro Cano <alvaro.cano@zevenet.com>

	modified:   usr/local/zevenet/share/global.conf.template
	modified:   usr/share/perl5/Zevenet/API40/Routes/System.pm
	modified:   usr/share/perl5/Zevenet/API40/System/Ext.pm
	modified:   usr/share/perl5/Zevenet/Apt.pm
	modified:   usr/share/perl5/Zevenet/Ids.pm

--- a/usr/local/zevenet/share/global.conf.template
+++ b/usr/local/zevenet/share/global.conf.template
@@ -129,6 +129,8 @@ $sys_net_dir="/sys/class/net";
 
 
 ## binaries
+#Where is file binary?
+$file_bin="/usr/bin/file";
 #Where is cat binary?
 $cat_bin="/usr/bin/cat";
 #Where is hostname binary?
@@ -336,7 +338,7 @@ $arp_unsolicited="";
 #ARP announcement, true / false (default)
 $arp_announce="";
 
-#Network duplicated net 
+#Network duplicated net
 $duplicated_net="false";
 
 
