[Bugfix] Variable bad defined
Signed-off-by: Alvaro Cano <alvaro.cano@zevenet.com>

	modified:   usr/local/zevenet/share/global.conf.template

--- a/usr/local/zevenet/share/global.conf.template
+++ b/usr/local/zevenet/share/global.conf.template
@@ -68,7 +68,7 @@ $apt_source_zevenet="/etc/apt/sources.list.d/zevenet.list";
 # apt user conf
 $apt_conf_file="/etc/apt/apt.conf";
 # apt updates dir
-$update_dir="/usr/local/zevenet/updates"
+$update_dir="/usr/local/zevenet/updates";
 # Zevenet URL repo
 $repo_url_zevenet="repo.zevenet.com";
 # Zevenet GPG key
