[Improvement] Manage ssyncd, arp_announcement and duplicated_network from the ZAPI
Signed-off-by: Alvaro Cano <alvaro.cano@zevenet.com>

	modified:   usr/local/zevenet/bin/arp_announce
	modified:   usr/local/zevenet/share/global.conf.template
	modified:   usr/share/perl5/Zevenet/API40/Routes/System.pm
	modified:   usr/share/perl5/Zevenet/API40/System/Ext.pm
	modified:   usr/share/perl5/Zevenet/Cmd/zcluster-manager.pm
	modified:   usr/share/perl5/Zevenet/Net/Core.pm
	modified:   usr/share/perl5/Zevenet/Net/Util.pm
	modified:   usr/share/perl5/Zevenet/Ssyncd.pm
	new file:   usr/share/perl5/Zevenet/System/Global.pm

--- a/usr/local/zevenet/share/global.conf.template
+++ b/usr/local/zevenet/share/global.conf.template
@@ -337,6 +337,10 @@ $zenrsync="-azvr --delete";#update
 $arp_unsolicited="";
 #ARP announcement, true / false (default)
 $arp_announce="";
+#Where is the script ARP announcement?
+$arp_announce_bin="/usr/local/zevenet/bin/arp_announce";
+#path for cron task of arp announcement
+$arp_announce_cron_path="/etc/cron.d/arp_announce";
 
 #Network duplicated net
 $duplicated_net="false";
