[Improvement] Add message when supportsave fails with the required space
Signed-off-by: Alvaro Cano <alvaro.cano@zevenet.com>

	modified:   usr/local/zevenet/bin/supportsave
	modified:   usr/local/zevenet/share/global.conf.template
	modified:   usr/share/perl5/Zevenet/API40/System/Info.pm
	modified:   usr/share/perl5/Zevenet/System.pm

--- a/usr/local/zevenet/share/global.conf.template
+++ b/usr/local/zevenet/share/global.conf.template
@@ -199,6 +199,10 @@ $logger="/usr/bin/logger";
 $sec="/usr/bin/sec";
 #Where is touch?
 $touch="/usr/bin/touch";
+#Where is sed?
+$sed_bin="/bin/sed";
+#Where is cut?
+$cut_bin="/bin/cut";
 #Where is ls?
 $ls="/bin/ls";
 #Where is stat?
