[Version] Increase the version
Signed-off-by: Alvaro Cano <alvaro.cano@zevenet.com>

	modified:   DEBIAN/control
	modified:   usr/local/zevenet/app/checkglobalconf/global.conf.tpl

--- a/DEBIAN/control
+++ b/DEBIAN/control
@@ -1,5 +1,5 @@
 Package: zevenet
-Version: 5.2.18
+Version: 5.2.18-1
 Maintainer: ZEVENET Company SL <support@zevenet.com>
 Architecture: amd64
 Section: admin
