[Bugfix] Modify the certificate path in pound template
Signed-off-by: Alvaro Cano <alvaro.cano@zevenet.com>

	modified:   usr/local/zevenet/share/global.conf.template
	new file:   usr/local/zevenet/share/poundtpl.cfg

--- a/usr/local/zevenet/share/global.conf.template
+++ b/usr/local/zevenet/share/global.conf.template
@@ -282,7 +282,7 @@ $pound="$base_pound/sbin/pound";#update
 #where is pound ctl?
 $poundctl="$base_pound/sbin/poundctl";#update
 #pound file configuration template?
-$poundtpl="$base_pound/etc/poundtpl.cfg";#update
+$poundtpl="$templatedir/poundtpl.cfg";#update
 #maximum value of http body to pass to modsecurity
 $waf_body_size="";
 
