[Improvement] Changed netcat binary path in AWS
Signed-off-by: Adán Samuel Marín Jacquot <adan.marin@zevenet.com>

	modificado:     DEBIAN/postinst
	modificado:     usr/local/zevenet/share/global.conf.template

--- a/usr/local/zevenet/share/global.conf.template
+++ b/usr/local/zevenet/share/global.conf.template
@@ -264,7 +264,10 @@ $arpsend_bin="/usr/sbin/arpsend";
 #Where is dhclient
 $dhcp_bin="/usr/sbin/dhclient";
 #Where is netcat
-$netcat_bin="/usr/bin/nc.openbsd";#update
+$aws_netcat_bin="/bin/nc.openbsd";#update
+$default_netcat_bin="/usr/bin/nc.openbsd";#update
+#This variable is modified from postinst
+$netcat_bin="/usr/bin/nc.openbsd";
 #Where is dmidecode
 $dmidecode_bin="/usr/sbin/dmidecode";
 
