[Bugfix] Add a grace time when a HTTP farms is stopped
Signed-off-by: Alvaro Cano <alvaro.cano@zevenet.com>

	modified:   usr/local/zevenet/share/global.conf.template
	modified:   usr/share/perl5/Zevenet/Farm/HTTP/Action.pm

--- a/usr/local/zevenet/share/global.conf.template
+++ b/usr/local/zevenet/share/global.conf.template
@@ -278,6 +278,8 @@ $proxytpl="$templatedir/proxytpl.cfg";#update
 $waf_body_size="";
 #Where is modsec rules check
 $waf_rule_check_bin="/usr/bin/modsec-rules-check";
+#time to ensure that the farm has been stopped completaly
+$http_farm_stop_grace_time="2";
 
 #Cipher PCI
 $cipher_pci="kEECDH+ECDSA+AES128:kEECDH+ECDSA+AES256:kEECDH+AES128:kEECDH+AES256:kEDH+AES128:kEDH+AES256:DES-CBC3-SHA:+SHA:!aNULL:!eNULL:!LOW:!kECDH:!DSS:!MD5:!EXP:!PSK:!SRP:!CAMELLIA:!SEED";#update
