--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -65,7 +65,7 @@ set(l7core_sources
     connection/connection.h connection/connection.cpp
     connection/backend_connection.h connection/backend_connection.cpp
     stream/stream_manager.h stream/stream_manager.cpp
-    stream/listener.h stream/listener.cpp
+	stream/listener_manager.h stream/listener_manager.cpp
     stream/stream_data_logger.h stream/stream_data_logger.cpp
     service/backend.h service/backend.cpp
     service/http_session_manager.h service/http_session_manager.cpp
