--- a/usr/local/zevenet/share/global.conf.template
+++ b/usr/local/zevenet/share/global.conf.template
@@ -275,15 +275,35 @@ $netcat_bin="/usr/bin/nc.openbsd";#update
 $dmidecode_bin="/usr/sbin/dmidecode";
 
 
+# zproxy
+#where is zproxy dir?
+$base_zproxy="$zdir/app/zproxy";#update
+#where is zproxy binary?
+$zproxy="$base_proxy/bin/zproxy";#update
+#where is zproxy ctl?
+$zproxyctl="$base_proxy/bin/zproxyctl";#update
+
+# Pound
+#where is pound binary?
+$base_pound="$zdir/app/pound";#update
+#where is pound binary?
+$pound="$base_pound/sbin/pound";#update
+#where is pound ctl?
+$poundctl="$base_pound/sbin/poundctl";#update
+
 # l7 proxy
+# Set the l7 binary: NG = true => zproxy, NG = false => pound
+$proxy_ng="true";
+
 #where is l7 proxy dir?
-$base_proxy="$zdir/app/zproxy";#update
+$base_proxy="$base_zproxy";
 #where is l7 proxy binary?
-$proxy="$base_proxy/bin/zproxy";#update
+$proxy="$zproxy";
 #where is l7 proxy ctl?
-$proxyctl="$base_proxy/bin/zproxyctl";#update
+$proxyctl="$zproxyctl";
 #l7 file configuration template?
 $proxytpl="$templatedir/proxytpl.cfg";#update
+
 #maximum value of http body to pass to modsecurity
 $waf_body_size="";
 #Where is modsec rules check
