--- a/build-pkg/config
+++ b/build-pkg/config
@@ -33,6 +33,7 @@ encrypted_files=(
 	usr/share/perl5/Zevenet/API31/System/Notification.pm
 	usr/share/perl5/Zevenet/API31/System/Service/HTTP.pm
 	usr/share/perl5/Zevenet/API31/System/Service/SSH.pm
+	usr/share/perl5/Zevenet/API32/Aws.pm
 	usr/share/perl5/Zevenet/API32/Certificate/Activation.pm
 	usr/share/perl5/Zevenet/API32/Farm/Get/GSLB.pm
 	usr/share/perl5/Zevenet/API32/Farm/GSLB.pm
@@ -107,6 +108,7 @@ encrypted_files=(
 	usr/share/perl5/Zevenet/API3/System/User.pm
 	usr/share/perl5/Zevenet/BUI.pm
 	usr/share/perl5/Zevenet/Apt.pm
+	usr/share/perl5/Zevenet/Aws.pm
 	usr/share/perl5/Zevenet/Certificate/Activation.pm
 	usr/share/perl5/Zevenet/Cluster.pm
 	usr/share/perl5/Zevenet/Cmd/boot_ipds.pm
