--- a/usr/local/zevenet/share/global.conf.template
+++ b/usr/local/zevenet/share/global.conf.template
@@ -470,7 +470,7 @@ $doc_v4_0="https://www.zevenet.com/zapidocv4.0";
 # cloud
 $cloud_address_metadata="169.254.169.254";
 $aws_bin="/usr/bin/aws";
-$aws_credentials="/root/.aws/credentials";
-$aws_config="/root/.aws/config";
+$aws_credentials="$configdir/cloud/.aws/credentials";
+$aws_config="$configdir/cloud/.aws/config";
 
 #::END Global Section
